deepgram tts added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(STT_SOURCES
     src/MicrosoftTTS.cpp
     src/TTSCache.cpp
     src/DeepgramSTT.cpp
+    src/DeepgramTTS.cpp
 )
 
 # Create a static library
