--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.27)
 project(stt-library)
+include(FetchContent)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -11,6 +12,15 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Set paths
 set(SPEECHSDK_ROOT "/usr/local/speechsdk")
+
+# === Download and build IXWebSocket ===
+FetchContent_Declare(
+  ixwebsocket
+  GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git
+  GIT_TAG master
+)
+
+FetchContent_MakeAvailable(ixwebsocket)
 
 # Include directory for headers
 include_directories(
@@ -52,7 +62,7 @@ target_link_libraries(stt
     pthread
     Microsoft.CognitiveServices.Speech.core
     crypto
-    /usr/local/lib/libixwebsocket.a
+    ixwebsocket
     z
     ssl
     cpr
