--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(stt-library)
+include(FetchContent)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -11,6 +12,29 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Set paths
 set(SPEECHSDK_ROOT "$ENV{HOME}/speechsdk")
+
+# === Download and build cpr ===
+
+# Enable SSL support in CPR
+set(CPR_ENABLE_SSL ON CACHE BOOL "Enable SSL for CPR")
+set(CPR_FORCE_USE_SYSTEM_CURL ON CACHE BOOL "Use system-installed libcurl")
+
+FetchContent_Declare(
+  cpr
+  GIT_REPOSITORY https://github.com/libcpr/cpr.git
+  GIT_TAG master
+)
+
+FetchContent_MakeAvailable(cpr)
+
+# === Download and build IXWebSocket ===
+FetchContent_Declare(
+  ixwebsocket
+  GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git
+  GIT_TAG master
+)
+
+FetchContent_MakeAvailable(ixwebsocket)
 
 # Include directory for headers
 include_directories(
